# ucas-compile

./: .gitignore  README.md  docker-compose.yml  docker.sh
assignment1/judge/: dockernote.txt  gradeForDocker.sh  readme.md
assignment1/resources/: test20_24.rar
assignment1/src/: ASTInterpreter.cpp  CMakeLists.txt  Environment.h
assignment1/test/: dump.sh  out.txt  run.sh  test00.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c
assignment2/judge/: extract.py  format_helper.py  grade.sh  gradeForDocker.sh  readme.md
assignment2/resources/: Assignment2_15_19.rar  assign2.tgz
assignment2/src/: CMakeLists.txt  LLVMAssignment.cpp
assignment2/test/: Makefile  out.txt  test00.ll.mark  test01.ll.mark  test02.ll.mark  test03.ll.mark  test04.ll.mark  test05.ll.mark  test06.ll.mark  test07.ll.mark  test08.ll.mark  test09.ll.mark  test10.ll.mark  test11.ll.mark  test12.ll.mark  test13.ll.mark  test14.ll.mark  test15.ll.mark  test16.ll.mark  test17.ll.mark  test18.ll.mark  test19.ll.mark
assignment3/: test.cpp  test.ll  test.m2r.ll
assignment3/judge/: grade.sh  readme.md
assignment3/resources/: assign3-test0_29.rar  assign3-test30_34.rar
assignment3/src/: CMakeLists.txt  Dataflow.h  FuncPtr.cpp  FuncPtr.h  LLVMAssignment.cpp  Liveness.h  utils.h
assignment3/test/: .out.swp  .test32.ll.swp  Makefile  out  test00.liveness.out  test00.liveness.out.1  test00.ll.m2r  test01.ll.m2r  test02.ll.m2r  test03.ll.m2r  test04.ll.m2r  test05.ll.m2r  (+33 more)
(+20 files in other folders)
